# TP_Jazz_Jackrabbit_2

./: .gitignore  .travis.yml  .vsls.json  CMakeLists.txt  README.md  Vagrantfile  installer.sh  precommit.sh  uninstaller.sh
Client/Lobby/: CMakeLists.txt  characterselection.cpp  characterselection.h  characterselection.ui  creategame.cpp  creategame.h  gamelist.cpp  lobby.cpp  lobby.h  lobby.ui  lobbyInit.cpp  main.cpp  name_screen.h  name_screen.ui  resources.qrc  sceneselection.cpp  scenespriteswidget.cpp  scenespriteswidget.h  waitingroom.cpp  waitingroom.ui  welcome.cpp  welcome.ui
Tests/: CMakeLists.txt  lobbyServerProtocolTest.cpp
Tests/GameTests/: testCharacterMove.cpp
Tests/ProtocolTests/: ClientProtocolTest.cpp  ServerProtocolTest.cpp  lobbyServerProtocolTest.cpp
src/: CMakeLists.txt
src/Client/: CMakeLists.txt  QTMonitor.cpp  client.cpp  client.h  lobby.h  lobbyMessage.h  main.cpp  receiver.cpp  resources.qrc  senderThread.cpp  sprite.h
src/Client/Controllers/: GameController.cpp  GameController.h  LobbyController.cpp  LobbyController.h
src/Client/Lobby/: CMakeLists.txt  characterselection.cpp  characterselection.h  characterselection.ui  creategame.cpp  creategame.h  creategame.ui  gamelist.cpp  gamelist.h  gamelist.ui  lobby.cpp  lobby.h  lobby.ui  lobbyInit.cpp  lobbyInit.h  mapselection.cpp  mapselection.h  mapselection.ui  resources.qrc  sceneselection.cpp  sceneselection.h  sceneselection.ui  scenespriteswidget.h  statistics.cpp  statistics.h  statistics.ui  waitingroom.cpp  waitingroom.h  waitingroom.ui  welcome.cpp  welcome.h  welcome.ui
src/Client/Lobby/SelectWidgets/: characterselectionwidget.cpp  characterselectionwidget.h  gamelistitem.cpp  gamelistitem.h  scenespriteswidget.cpp  scenespriteswidget.h
src/Client/Lobby/Styles/: characterselection.qss  creategame.qss  gameslist.qss  lobby.qss  mapselection.qss  waitingroom.qss  welcome.qss
src/Client/Protocol/: deserializer.cpp  deserializer.h  lobbyMessage.h  protocol.cpp  protocol.h  serializer.cpp  serializer.h
src/Client/Protocol/Types/: lobbyMessage.h
src/Client/SDL/: enemy.cpp  enemy.h  enemyweapon.cpp  enemyweapon.h  gamescreen.cpp  gamescreen.h  interface.cpp  interface.h  level.cpp  level.h  main.cpp  player.cpp  player.h  points.cpp  points.h  projectile.cpp  projectile.h  soundController.cpp  soundController.h
src/Client/Threads/: cmdReaderThread.cpp  cmdReaderThread.h  receiverThread.cpp  receiverThread.h  senderThread.cpp  senderThread.h
src/Common/: CMakeLists.txt  charactersType.h  dtoValidator.h  liberror.cpp  logger.h  printer.h  protocol.cpp  protocol.h  queue.h  queueMonitor.cpp  queueMonitor.h  resolver.cpp  resolvererror.cpp  resolvererror.h  serializer.h  socket.h  sprite.h  vector.h
src/Common/Config/: ClientConfig.cpp  ClientConfig.h  ServerConfig.cpp  ServerConfig.h
src/Common/Constants/: characterSelect.h  episodeSelect.h  lobbyCommands.h  playerCommands.h
src/Common/DTO/: bullet.cpp  bullet.h  characterType.cpp  characterType.h  cheat.h  command.cpp  command.h  createGame.cpp  createGame.h  dto.h  enemy.cpp  enemy.h  episodesList.cpp  episodesList.h  game.cpp  game.h  gameCommand.cpp  gameCommand.h  gameElement.cpp  gameElement.h  gameUpdate.cpp  gameUpdate.h  gamesList.cpp  gamesList.h  item.cpp  item.h  joinGame.cpp  joinGame.h  lobby.cpp  lobby.h  mapsList.cpp  mapsList.h  move.cpp  move.h  player.cpp  player.h  specialAttack.cpp  specialAttack.h  startGame.cpp  startGame.h  (+6 more)
src/Common/Models/: gameTypes.h
src/Common/Types/: character.h  command.h  direction.h  dto.h  elements.h  enemy.h  entity.h  episode.h  finalStats.h  gameInfo.h  gameMode.h  item.h  lobbyMessage.h  lobbyState.h  move.h  objectState.h  obstacles.h  sounds.h  terrain.h  tile.h  weapon.h
src/Common/maps/: mapsManager.cpp  mapsManager.h
src/Documentation/: Documentacion-Tecnica.tex  Manual-de-Proyecto.tex  Manual-de-Usuario.tex
src/Documentation/Diagrams/: Client.puml  DTO.puml  GameCommandHandlers.puml  LevelEditor.puml  LobbyClases.puml  LobbyCommandHandlers.puml  LobbyFlujo.puml  ServerGame.puml  ServerThreads.puml
src/Server/: CMakeLists.txt  MapsManager.h  main.cpp  server.cpp  server.h
src/Server/CommandHandler/: command.cpp  command.h  createGame.cpp  createGame.h  gamesList.cpp  gamesList.h  joinGame.cpp  joinGame.h  startGame.cpp  startGame.h
src/Server/CommandHandlers/Game/: cheat.cpp  cheat.h  gameCommand.cpp  gameCommand.h  idle.cpp  idle.h  jump.cpp  jump.h  move.cpp  move.h  shoot.cpp  shoot.h  specialAttack.cpp  specialAttack.h  sprint.cpp  sprint.h  switchWeapon.cpp  switchWeapon.h
src/Server/CommandHandlers/Lobby/: createGame.cpp  createGame.h  episodesList.cpp  (+13 more)
src/Server/Game/: entity.cpp  entity.h  entityFactory.cpp  entityFactory.h  game.cpp  game.h  gameMap.cpp  gameMap.h  gameMonitor.cpp  gameMonitor.h  mapsManager.h  obstacle.cpp  obstacle.h  player.cpp  player.h
src/Server/LobbyCommand/: createGameCommand.cpp  createGameCommand.h  invalidCommand.cpp  invalidCommand.h  joinGameCommand.cpp  joinGameCommand.h  listGamesCommand.h  lobbyCommand.cpp  lobbyCommand.h
src/Server/Physics/: character.cpp  character.h  collectible.h  config.cpp  config.h  enemy.h  entity.h  entityFactory.h  gameMap.cpp  gameMap.h  gameStatus.h  object.h  obstacle.cpp  obstacle.h  phyisics.h  physics.cpp  physics.h  platform.h  playerCharacter.cpp  playerCharacter.h  projectile.h  weapon.h
src/Server/Protocol/: deserializer.cpp  deserializer.h  protocol.cpp  protocol.h  serializer.cpp  serializer.h
src/Server/Threads/: acceptor.cpp  acceptor.h  acceptorThread.cpp  acceptorThread.h  broadcasterThread.cpp  broadcasterThread.h  gameLoop.cpp  gameLoop.h  gameLoopThread.h  gameloopThread.cpp  lobbyPlayerThread.cpp  lobbyPlayerThread.h  receiver.cpp  receiver.h  receiverThread.cpp  receiverThread.h  sender.cpp  sender.h  senderThread.cpp  senderThread.h
src/Tests/: lobbyServerProtocolTest.cpp  main.cpp
src/config/: client.yaml  common.yaml  server.yaml
src/maps/: b.yaml  ba.yaml  be.yaml  beach.yaml  cc.yaml  cccccccc.yaml  colonius.yaml  holidaius.yaml
(+311 files in other folders)
