add_library(common
    charactersType.h
    Config/ClientConfig.cpp
    Config/ClientConfig.h
    Config/ServerConfig.cpp
    Config/ServerConfig.h
    DTO/bullet.cpp
    DTO/bullet.h
    DTO/command.cpp
    DTO/command.h
    DTO/createGame.cpp
    DTO/createGame.h
    DTO/dto.h
    DTO/enemy.cpp
    DTO/enemy.h
    DTO/game.cpp
    DTO/gameElement.cpp
    DTO/gameElement.h
    DTO/game.h
    DTO/gamesList.cpp
    DTO/gamesList.h
    DTO/item.cpp
    DTO/item.h
    DTO/joinGame.cpp
    DTO/joinGame.h
    DTO/lobby.cpp
    DTO/lobby.h
    DTO/move.cpp
    DTO/move.h
    DTO/player.cpp
    DTO/player.h
    DTO/startGame.cpp
    DTO/startGame.h
    DTO/switchWeapon.cpp
    DTO/switchWeapon.h
    DTO/tile.cpp
    DTO/tile.h
    DTO/weapon.cpp
    DTO/weapon.h
    liberror.cpp
    liberror.h
    logger.h
    printer.h
    queue.h
    queueMonitor.cpp
    queueMonitor.h
    resolver.cpp
    resolvererror.cpp
    resolvererror.h
    resolver.h
    serializer.h
    socket.cpp
    socket.h
    sprite.h
    thread.h
    Types/character.h
    Types/command.h
    Types/direction.h
    Types/dto.h
    Types/elements.h
    Types/enemy.h
    Types/entity.h
    Types/episode.h
    Types/gameMode.h
    Types/lobbyState.h
    Types/weapon.h
    vector.h
)

target_include_directories(common PUBLIC ${PROJECT_SOURCE_DIR}/src/Common)
